# sqlplot-tools

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindPostgreSQL.cmake
examples/sorting-speed/: CMakeLists.txt  paper.tex  sorting-speed.cpp  speed-data.txt  speed.plot  stats.txt
examples/stats_writer/: CMakeLists.txt  stats_writer.h  test  test.cc  test.cpp
src/: CMakeLists.txt  common.cpp  common.h  fieldset.cpp  fieldset.h  gnuplot.cpp  importdata.cpp  importdata.h  latex.cpp  main.cpp  mysql.cpp  mysql.h  pgsql.cpp  pgsql.h  reformat.cpp  reformat.h  simpleglob.h  simpleopt.h  sp-gnuplot.cpp  sp-importdata.cpp  sp-latex.cpp  sp-process.cpp  sql.cpp  sql.h  sqlite-functions.cpp  sqlite.cpp  sqlite.h  strtools.h  textlines.h
tests/: CMakeLists.txt
tests/gnuplot/: CMakeLists.txt  macro1-data.txt  macro1.gp  macro1.out  multiplot1-data.txt  multiplot1.gp  multiplot1.out  plot1-data.txt  plot1.gp  plot1.out
tests/latex/: CMakeLists.txt  attr.out  attr.tex  defmacro.out  defmacro.tex  format1.out  format1.tex  multiplot1.out  multiplot1.tex  nolegend.out  nolegend.tex  plot1.out  plot1.tex  tabtable1.out  tabtable1.tex  tabtable2.tex  tabular1.out  tabular1.tex  tabular2.out  tabular2.tex  test-loaded.db  test.data  test1.tex  test2.out  test2.tex  test3.out  test3.tex  texttable1.out  texttable1.tex
